# langchain-needle

./: Licence.md  README.md
community/: pyproject.toml
community/tests/unit_tests/retrievers/: test_needle.py
docs/document_loaders/: needle.ipynb
langchain-needle/document_loaders/: __init__.py
langchain-needle/retrievers/: __init__.py
